--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     </div>
   </template>
 
-  <script src="js/mapControl.js"></script>
+  <script src="js/map-control.js"></script>
   <script src="js/form.js"></script>
   <script src="js/data.js"></script>
   <script src="js/pin.js"></script>
