--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
   </template>
 
   <script src="js/filter.js"></script>
+  <script src="js/debounce.js"></script>
   <script src="js/backend.js"></script>
   <script src="js/map-control.js"></script>
   <script src="js/form.js"></script>
