--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
     </div>
   </template>
 
+  <script src="js/avatar.js"></script>
   <script src="js/filter.js"></script>
   <script src="js/card.js"></script>
   <script src="js/debounce.js"></script>
